5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1716_2498.log
== TEST (2019-05-14 23:38:19) 
-- CODE:
nhab1=int(input("numero de habitantes:"))
nhab2=int(input("numero de habitantes:"))
cre1=float(input("crescimento populacional:"))
cre2=float(input("crescimento populacional:"))
anos=1
while(nhab1>=nhab2):
	nhab1=nhab1*(1+cre1)
	nhab2=nhab2*(1+cre2)
	anos=anos+1
print(anos)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:39:18) 
-- CODE:
nhab1=int(input("numero de habitantes:"))
nhab2=int(input("numero de habitantes:"))
cre1=float(input("crescimento populacional:"))
cre2=float(input("crescimento populacional:"))
anos=1
while(nhab1>=nhab2):
	nhab1=nhab1*(1+(cre1/100))
	nhab2=nhab2*(1+(cre2/100))
	anos=anos+1
print(anos)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:46:37) 
-- CODE:
nhab1=int(input("numero de habitantes:"))
nhab2=int(input("numero de habitantes:"))
cre1=float(input("crescimento populacional:"))
cre2=float(input("crescimento populacional:"))
cont=0
while(nhab1>=nhab2):
	cont=1
	nhab1=nhab1+(nhab1*(cre1/100))
	nhab2=nhab2+(nhab2*(cre2/100))
	
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:46:47) 
-- CODE:
nhab1=int(input("numero de habitantes:"))
nhab2=int(input("numero de habitantes:"))
cre1=float(input("crescimento populacional:"))
cre2=float(input("crescimento populacional:"))
cont=0
while(nhab1>=nhab2):
	cont=1
	nhab1=nhab1+(nhab1*(cre1/100))
	nhab2=nhab2+(nhab2*(cre2/100))
	
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:47:09) 
-- CODE:
nhab1=int(input("numero de habitantes:"))
nhab2=int(input("numero de habitantes:"))
cre1=float(input("crescimento populacional:"))
cre2=float(input("crescimento populacional:"))

while(nhab1>=nhab2):
	cont=1
	nhab1=nhab1+(nhab1*(cre1/100))
	nhab2=nhab2+(nhab2*(cre2/100))
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(cont)
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
